--- a/master/client/src/main.css
+++ b/master/client/src/main.css
@@ -9,7 +9,9 @@ h1 {
 .forms {
     display: flex;
     flex-direction: column;
+    align-items: center;
     text-align: center;
+    margin: 1rem;
 }
 
 .forms button {
@@ -28,9 +30,25 @@ h1 {
     display: flex;
     flex-direction: column;
     text-align: center;
+    border: 2px solid black;
+    border-radius: 5px;
 }
 
 .ingredients button, .steps button {
     margin-bottom: 1rem;
     background-color: orange;
+    width: 8rem;
+    padding: 0.5rem;
+}
+
+.ingredients button:hover, .steps button:hover {
+    background-color: rgb(239, 188, 168);
+}
+
+.ingredient, .step {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    margin: 1rem;
 }
