--- a/master/client/src/main.css
+++ b/master/client/src/main.css
@@ -82,3 +82,35 @@ h1 {
 .recipe:hover {
     background-color: aqua;
 }
+
+.top {
+    display: flex;
+    background-color: green;
+    padding: 1rem;
+}
+
+.top button {
+    margin: 1rem;
+    width: 10rem;
+    height: 3rem;
+    background-color: yellowgreen;
+    border-radius: 5px;
+}
+
+.top button:hover {
+    background-color: rgb(90, 142, 90);
+    transform: scale(1.08);
+}
+
+.recipe-details {
+    display: flex;
+    flex-direction: column;
+    margin: 1rem;
+    padding: 1rem;
+}
+
+.recipe-details img {
+    width: 40%;
+    height: 40%;
+    align-self: center;
+}
