--- a/master/client/src/main.css
+++ b/master/client/src/main.css
@@ -6,6 +6,48 @@ h1 {
     text-align: center;
 }
 
+button:hover {
+    transform: scale(1.06);
+}
+
+.top-bar {
+    background-color: rgb(166, 220, 59);
+    overflow: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto auto auto;
+}
+
+.top-bar .title {
+    grid-column: 2 / 5;
+    grid-row: 1;
+}
+
+.top-bar button {
+    background-color: rgb(26, 156, 179);
+    border-radius: 5px;
+    grid-row: 2;
+    padding: 0.5rem 0;
+}
+
+.top-bar button:hover {
+    transform: scale(1.06);
+}
+
+.top-bar .first {
+    grid-column: 2;
+}
+
+.top-bar .second {
+    grid-column: 4;
+}
+
+.top-bar .greeting {
+    grid-column: 3;
+    grid-row: 3;
+    text-align: center;
+}
+
 .forms {
     display: flex;
     flex-direction: column;
@@ -45,22 +87,13 @@ h1 {
     background-color: rgb(239, 188, 168);
 }
 
-.ingredient, .step {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-    margin: 1rem;
-}
-
 .recipes {
-    display: flex;
+    display: grid;
     margin: 1rem;
+    grid-template-columns: repeat(4, 1fr);
 }
 
 .recipe {
-    margin: 1rem;
-    padding: 1rem;
     border: 3px solid black;
     border-radius: 5px;
     width: 15rem;
@@ -74,18 +107,30 @@ h1 {
     text-overflow: ellipsis;
 }
 
+.recipe .recipe-title {
+    background-color: rgb(255, 193, 79);
+    overflow: auto;
+    font-size: large;
+    padding: 0.5rem;
+}
+
+.recipe .description {
+    margin: 0.3rem;
+}
+
 .recipe img {
     width: 100%;
     height: 10rem;
 }
 
 .recipe:hover {
-    background-color: aqua;
+    transform: scale(1.06);
+    border-color: brown;
 }
 
 .top {
     display: flex;
-    background-color: green;
+    background-color: rgb(166, 220, 59);
     padding: 1rem;
 }
 
@@ -93,26 +138,83 @@ h1 {
     margin: 1rem;
     width: 10rem;
     height: 3rem;
-    background-color: yellowgreen;
+    background-color: rgb(26, 156, 179);
     border-radius: 5px;
 }
 
-.top button:hover {
-    background-color: rgb(90, 142, 90);
-    transform: scale(1.08);
+.recipe-details {
+    display: grid;
+    padding: 0 1rem;
+    border: 2px solid black;
+    align-items: center;
+    grid-template-columns: 1fr 3fr 1fr;
 }
 
-.recipe-details {
-    display: flex;
-    flex-direction: column;
-    margin: 1rem;
-    padding: 1rem;
+.recipe-details > * {
+    grid-column: 2;
 }
 
 .recipe-details img {
-    width: 40%;
-    height: 40%;
+    grid-column: 2;
+    width: 50%;
     align-self: center;
+    border: 2px solid black;
+    border-radius: 5px;
+}
+
+.recipe-details img:hover {
+    transform: scale(1.08);
+}
+
+.recipe-details p {
+    font-size: large;
+}
+
+.recipe-details .ingredient, .recipe-details .step {
+    margin-right: 3rem;
+}
+
+.ingredient-list, .step-list {
+    border: 2px solid black;
+    border-radius: 5px;
+    margin-bottom: 1rem;
+}
+
+.ingredient-list > *, .step-list > * {
+    margin-left: 1rem;
+}
+
+.add-recipe-ingredients, .add-recipe-steps,
+.edit-recipe-ingredients, .edit-recipe-steps 
+{
+    display: flex;
+    flex-direction: column;
+    border: 2px solid black;
+    margin: 1rem 0;
+    padding: 1rem;
+}
+
+.add-recipe-ingredients > *, .add-recipe-steps > *, 
+.edit-recipe-ingredients > *, .edit-recipe-steps > *
+{
+    margin-top: 1rem;
+}
+
+.add-recipe-ingredients button, .add-recipe-steps button,
+.edit-recipe-ingredients button, .edit-recipe-steps button 
+{
+    width: 9rem;
+}
+
+.sign-up, .login-page {
+    border: 2px solid black;
+    border-radius: 5px;
+}
+
+.image-file {
+    border: 2px solid black;
+    border-radius: 4px;
+    margin: 1rem;
 }
 
 .forms select {
