--- a/master/client/src/main.css
+++ b/master/client/src/main.css
@@ -148,6 +148,8 @@ button:hover {
     border: 2px solid black;
     align-items: center;
     grid-template-columns: 1fr 3fr 1fr;
+    row-gap: 1rem;
+    column-gap: 1rem;
 }
 
 .recipe-details > * {
