--- a/master/client/src/main.css
+++ b/master/client/src/main.css
@@ -16,18 +16,22 @@ button:hover {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: auto auto auto;
+    column-gap: 1rem;
+    height: 21vh;
+    overflow: hidden;
 }
 
 .top-bar .title {
     grid-column: 2 / 5;
     grid-row: 1;
+    height: 50%;
 }
 
 .top-bar button {
     background-color: rgb(26, 156, 179);
     border-radius: 5px;
     grid-row: 2;
-    padding: 0.5rem 0;
+    height: 50%;
 }
 
 .top-bar button:hover {
@@ -39,13 +43,48 @@ button:hover {
 }
 
 .top-bar .second {
-    grid-column: 4;
+    grid-column: 3;
 }
 
 .top-bar .greeting {
-    grid-column: 3;
-    grid-row: 3;
+    grid-column: 1;
+    grid-row: 2;
     text-align: center;
+}
+
+.top-bar .search-bar {
+    grid-column: 4;
+    grid-row: 2;
+    display: flex;
+    height: 50%;
+}
+
+.top-bar .search-bar input {
+    width: 20rem;
+    margin-left: 1rem;
+    border-radius: 5px;
+    border: 2px solid black;
+}
+
+.top-bar .search-bar img {
+    border: 2px solid black;
+    border-radius: 5px;
+}
+
+.top-bar .search-bar img:hover {
+    background-color: blue;
+}
+
+.top-bar .account {
+    grid-column: 5;
+    grid-row: 2;
+    width: 20%;
+    height: 50%;
+}
+
+.top-bar .account img {
+    width: 50%;
+    height: 50%;
 }
 
 .forms {
@@ -91,6 +130,7 @@ button:hover {
     display: grid;
     margin: 1rem;
     grid-template-columns: repeat(4, 1fr);
+    row-gap: 1rem;
 }
 
 .recipe {
