--- a/master/client/src/main.css
+++ b/master/client/src/main.css
@@ -8,6 +8,7 @@ h1 {
 
 button:hover {
     transform: scale(1.06);
+    cursor: pointer;
 }
 
 .top-bar {
@@ -24,6 +25,13 @@ button:hover {
 .top-bar .title {
     grid-column: 2 / 5;
     grid-row: 1;
+    height: 50%;
+}
+
+.top-bar .title-2 {
+    grid-column: 2;
+    grid-row: 2;
+    align-self: center;
     height: 50%;
 }
 
@@ -69,6 +77,7 @@ button:hover {
 .top-bar .search-bar img {
     border: 2px solid black;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .top-bar .search-bar img:hover {
@@ -78,12 +87,7 @@ button:hover {
 .top-bar .account {
     grid-column: 5;
     grid-row: 2;
-    width: 20%;
-    height: 50%;
-}
-
-.top-bar .account img {
-    width: 50%;
+    width: 40%;
     height: 50%;
 }
 
@@ -138,6 +142,7 @@ button:hover {
     border-radius: 5px;
     width: 15rem;
     height: 15rem;
+    cursor: pointer;
 }
 
 .recipe p {
