--- a/master/client/src/main.css
+++ b/master/client/src/main.css
@@ -6,6 +6,10 @@ h1 {
     text-align: center;
 }
 
+textarea {
+    resize: none;
+}
+
 button:hover {
     transform: scale(1.06);
     cursor: pointer;
@@ -102,7 +106,6 @@ button:hover {
 .forms button {
     width: 5rem;
     padding: 0.2rem 0;
-    margin: 1rem auto auto;
     background-color: aqua;
     border-radius: 5px;
 }
@@ -113,14 +116,10 @@ button:hover {
 
 .ingredients, .steps {
     display: flex;
-    flex-direction: column;
     text-align: center;
-    border: 2px solid black;
-    border-radius: 5px;
 }
 
 .ingredients button, .steps button {
-    margin-bottom: 1rem;
     background-color: orange;
     width: 8rem;
     padding: 0.5rem;
@@ -154,7 +153,9 @@ button:hover {
 
 .recipe .recipe-title {
     background-color: rgb(255, 193, 79);
-    overflow: auto;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
     font-size: large;
     padding: 0.5rem;
 }
@@ -231,6 +232,10 @@ button:hover {
     margin-left: 1rem;
 }
 
+.add-recipe label {
+    margin-top: 2rem;
+}
+
 .add-recipe-ingredients, .add-recipe-steps,
 .edit-recipe-ingredients, .edit-recipe-steps 
 {
@@ -241,9 +246,14 @@ button:hover {
     padding: 1rem;
 }
 
-.add-recipe-ingredients > *, .add-recipe-steps > *, 
+.add-recipe-steps > *, 
 .edit-recipe-ingredients > *, .edit-recipe-steps > *
 {
+    margin-top: 1rem;
+}
+
+.add-recipe-ingredients .ingredients {
+    height: 40px;
     margin-top: 1rem;
 }
 
@@ -251,6 +261,15 @@ button:hover {
 .edit-recipe-ingredients button, .edit-recipe-steps button 
 {
     width: 9rem;
+}
+
+.add {
+    align-self: center;
+    margin-top: 1rem;
+}
+
+.cancel {
+    margin-top: 1rem;
 }
 
 .sign-up, .login-page, .edit-user {
