--- a/master/client/src/main.css
+++ b/master/client/src/main.css
@@ -15,15 +15,20 @@ button:hover {
     cursor: pointer;
 }
 
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: 1fr 4fr;
+}
+
 .top-bar {
     background-color: rgb(166, 220, 59);
-    overflow: auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: auto auto auto;
     column-gap: 1rem;
-    height: 21vh;
-    overflow: hidden;
+    grid-column: 1 / 3;
+    grid-row: 1;
 }
 
 .top-bar .title {
@@ -93,6 +98,12 @@ button:hover {
     grid-row: 2;
     width: 40%;
     height: 50%;
+}
+
+.side-bar {
+    width: 15vw;
+    height: 100%;
+    border: 1px solid grey;
 }
 
 .forms {
