--- a/master/client/src/main.css
+++ b/master/client/src/main.css
@@ -18,7 +18,13 @@ button:hover {
 .grid-container {
     display: grid;
     grid-template-columns: 1fr 5fr;
-    grid-template-rows: 1fr 9fr;
+    grid-template-rows: 2fr auto 1fr;
+    height: 100vh;
+}
+
+.grid-container footer {
+    grid-column: 1 / 3;
+    grid-row: 3;
 }
 
 .top-bar {
@@ -101,9 +107,12 @@ button:hover {
 }
 
 .side-bar {
+    grid-column: 1;
+    grid-row: 2;
     width: 15vw;
     height: 100%;
     border: 1px solid grey;
+    overflow-y: auto;
 }
 
 .forms {
@@ -143,7 +152,7 @@ button:hover {
 .recipes {
     display: grid;
     margin: 1rem; 
-    height: 15rem;
+    height: auto;
     grid-template-columns: repeat(4, 1fr);
     row-gap: 1rem;
 }
@@ -186,7 +195,7 @@ button:hover {
     border-color: brown;
 }
 
-.stars {
+.stars, .stars-homepage {
     display: flex;
     align-items: center;
 }
@@ -345,6 +354,14 @@ button:hover {
     border-radius: 5px;
 }
 
+.login-page {
+    height: 85vh;
+}
+
+.login-page .forms {
+    height: 80%;
+}
+
 .image-file {
     border: 2px solid black;
     border-radius: 4px;
@@ -370,4 +387,13 @@ button:hover {
     transform: scale(1);
     height: 2rem;
     background-color: red;
+}
+
+footer {
+    text-align: center;
+    background-color: green;
+    color: white;
+    max-height: 1rem;
+    padding: 1.5rem 0;
+    width: 100%;
 }
