--- a/master/client/src/main.css
+++ b/master/client/src/main.css
@@ -24,7 +24,7 @@ button:hover {
 
 .grid-container footer {
     grid-column: 1 / 3;
-    grid-row: 3;
+    grid-row: 4;
 }
 
 .top-bar {
@@ -132,6 +132,21 @@ button:hover {
 
 .forms label {
     margin: 0.5rem 0;
+}
+
+.pages {
+    grid-column: 1 / 3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.pages > * {
+    margin: 0.5rem 0.5rem;
+}
+
+.pages p {
+    font-size: larger;
 }
 
 .ingredients, .steps {
