--- a/master/client/src/main.css
+++ b/master/client/src/main.css
@@ -27,10 +27,14 @@ button:hover {
     grid-row: 4;
 }
 
+.grid-container .top-bar button {
+    height: 50%;
+}
+
 .top-bar {
     background-color: rgb(166, 220, 59);
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(6, 1fr);
     grid-template-rows: auto auto auto;
     column-gap: 1rem;
     grid-column: 1 / 3;
@@ -54,7 +58,7 @@ button:hover {
     background-color: rgb(26, 156, 179);
     border-radius: 5px;
     grid-row: 2;
-    height: 50%;
+    width: 8rem;
 }
 
 .top-bar button:hover {
@@ -67,6 +71,10 @@ button:hover {
 
 .top-bar .second {
     grid-column: 3;
+}
+
+.top-bar .third {
+    grid-column: 5;
 }
 
 .top-bar .greeting {
@@ -100,10 +108,14 @@ button:hover {
 }
 
 .top-bar .account {
-    grid-column: 5;
+    grid-column: 6;
     grid-row: 2;
     width: 40%;
     height: 50%;
+}
+
+.top-bar .account button {
+    height: 5%;
 }
 
 .side-bar {
@@ -402,6 +414,35 @@ button:hover {
     transform: scale(1);
     height: 2rem;
     background-color: red;
+}
+
+.groups-page {
+    display: grid;
+    align-items: center;
+}
+
+.groups-page .top-bar {
+    height: 20vh;
+}
+
+.group-page .top-bar button {
+    height: 1rem;
+}
+
+.groups {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    width: 100vw;
+}
+
+.group {
+    border: 2px solid black;
+    text-align: center;
+}
+
+.group:hover {
+    background-color: yellow;
 }
 
 footer {
