--- a/master/client/src/menuContainer.css
+++ b/master/client/src/menuContainer.css
@@ -11,11 +11,6 @@
     z-index: 1000;
 }
 
-.menu button {
-    width: 50%;
-    height: 5%;
-}
-
 .menu .menu-button {
     margin-bottom: 1rem;
 }
@@ -25,6 +20,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.menu .menu-button {
+    height: 5%;
 }
 
 .menu.closed {
@@ -58,4 +57,23 @@
     width: 20%;
     align-self: center;
     padding-bottom: 3rem;
+}
+
+.notifications {
+    background-color: red;
+    border-radius: 50%;
+    display: inline-block;
+    padding: 0.2rem 0.4rem;
+    top: 0;
+    right: 0;
+    position: relative;
+    transform: translate(50%, -50%);
+}
+
+.notifications-flex {
+    display: flex;
+}
+
+.notifications-flex button {
+    height: 5rem;
 }
