--- a/master/client/src/main.css
+++ b/master/client/src/main.css
@@ -476,6 +476,22 @@ button:hover {
     margin-top: 1rem;
 }
 
+
+.edit-group {
+    display: flex;
+    flex-direction: column;
+}
+
+.boxed {
+    border: 2px solid black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-self: center;
+    width: 50vw;
+    margin-bottom: 1rem;
+}
+
 footer {
     text-align: center;
     background-color: green;
