--- a/master/client/src/main.css
+++ b/master/client/src/main.css
@@ -268,7 +268,7 @@ button:hover {
     padding: 0 1rem;
     border: 2px solid black;
     align-items: center;
-    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-columns: 1fr 3fr 2fr 1fr;
     row-gap: 1rem;
     column-gap: 1rem;
 }
@@ -586,6 +586,73 @@ button:hover {
 .top-bar-book .second {
     grid-row: 3;
     grid-column: 4;
+}
+
+.book-recipe {
+    margin-top: 0.2rem;
+    display: grid;
+    padding: 0 1rem;
+    align-items: center;
+    grid-template-columns: 1fr 6fr 3fr 1fr;
+    row-gap: 1rem;
+    column-gap: 1rem;
+}
+
+.book-recipe > * {
+    grid-column: 2;
+}
+
+.book-recipe img {
+    grid-column: 2;
+    width: 40vw;
+    height: 50vh;
+    align-self: center;
+    border: 2px solid black;
+    border-radius: 5px;
+}
+
+.book-recipe .info {
+    grid-column: 3;
+    grid-row: 2;
+}
+
+.book-recipe .previous, .book-recipe .next {
+    grid-row: 1 / 11;
+    height: 100%;
+    background-color: bisque;
+    border-radius: 10px;
+}
+
+.book-recipe .previous {
+    grid-column: 1;
+}
+
+.book-recipe .next {
+    grid-column: 4;
+}
+
+.book-recipe .previous::before,
+.book-recipe .next::before {
+    content: "";
+    display: inline-block;
+    width: 0;
+    height: 0;
+    border-style: solid;
+}
+
+.book-recipe .previous::before {
+    border-width: 10px 15px 10px 0;
+    border-color: transparent black transparent black;
+}
+
+.book-recipe .next::before {
+    border-width: 10px 0 10px 15px;
+    border-color: transparent black transparent black;
+}
+
+.bookpage {
+    display: flex;
+    justify-content: center;
 }
 
 footer {
