--- a/master/client/src/main.css
+++ b/master/client/src/main.css
@@ -2,6 +2,16 @@ body {
     margin: 0;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    -moz-appearance: textfield;
+}
+
 h1 {
     text-align: center;
 }
@@ -561,10 +571,11 @@ button:hover {
 
 .top-bar-book {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(6, 1fr);
     grid-template-rows: 2fr 1fr 1fr;
     background-color: orange;
     padding-bottom: 0.2rem;
+    column-gap: 1rem;
 }
 
 .top-bar-book .title {
@@ -585,7 +596,17 @@ button:hover {
 
 .top-bar-book .second {
     grid-row: 3;
+    grid-column: 3;
+}
+
+.top-bar-book .third {
+    grid-row: 3;
     grid-column: 4;
+}
+
+.top-bar-book .fourth {
+    grid-row: 3;
+    grid-column: 5;
 }
 
 .book-recipe {
@@ -621,6 +642,7 @@ button:hover {
     height: 100%;
     background-color: bisque;
     border-radius: 10px;
+    transform: scale(1);
 }
 
 .book-recipe .previous {
