--- a/master/client/src/main.css
+++ b/master/client/src/main.css
@@ -677,6 +677,43 @@ button:hover {
     justify-content: center;
 }
 
+.comments {
+    border: 4px solid black;
+    padding: 1rem;
+}
+
+.comment-options {
+    display: flex;
+    flex-direction: column;
+}
+
+.comment-options button {
+    transform: scale(1);
+}
+
+.comment {
+    margin-top: 2rem;
+    border: 2px solid rgb(118, 118, 245);
+    border-radius: 10px;
+    padding: 1rem;
+}
+
+.comment p {
+    font-size: 15px;
+    margin-top: 0.1rem;
+}
+
+.flex {
+    display: flex;
+    align-items: center;
+}
+
+.time {
+    margin-left: 1rem;
+    color: grey;
+    font-size: 11px;
+}
+
 footer {
     text-align: center;
     background-color: green;
