--- a/master/client/src/main.css
+++ b/master/client/src/main.css
@@ -703,9 +703,13 @@ button:hover {
     margin-top: 0.1rem;
 }
 
-.flex {
+.flex, .flex-column {
     display: flex;
     align-items: center;
+}
+
+.flex-column {
+    flex-direction: column;
 }
 
 .time {
