--- a/master/client/src/main.css
+++ b/master/client/src/main.css
@@ -720,7 +720,9 @@ button:hover {
 
 .email-to-be-sent {
     border: 4px solid black;
+    border-radius: 10px;
     text-align: left;
+    padding: 1rem;
 }
 
 footer {
