--- a/master/client/src/main.css
+++ b/master/client/src/main.css
@@ -725,6 +725,47 @@ button:hover {
     padding: 1rem;
 }
 
+.favourite-section {
+    grid-column: 3;
+    grid-row: 2;
+    display: flex;
+    align-items: center;
+}
+
+.favourite-section p {
+    margin-left: 0.5rem;
+    font-size: small;
+}
+
+.favourite {
+    position: relative;
+    width: 24px;
+    height: 32px;
+    background-color: grey;
+    border-radius: 2px;
+    cursor: pointer;
+}
+
+.favourite::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 0;
+    border-left: 12px solid transparent;
+    border-right: 12px solid transparent;
+    border-bottom: 12px solid white;
+}
+
+.favourite.filled {
+    background-color: purple;
+}
+
+.favourite.filled::after {
+    border-top-color: purple;
+}
+
 footer {
     text-align: center;
     background-color: green;
