--- a/master/client/src/main.css
+++ b/master/client/src/main.css
@@ -28,13 +28,17 @@ button:hover {
 .grid-container {
     display: grid;
     grid-template-columns: 1fr 5fr;
-    grid-template-rows: 2fr auto 1fr;
+    grid-template-rows: 2fr 1fr auto 1fr;
     height: 100vh;
+}
+
+.grid-container .sort {
+    grid-row: 2;
 }
 
 .grid-container footer {
     grid-column: 1 / 3;
-    grid-row: 4;
+    grid-row: 5;
 }
 
 .grid-container .top-bar button {
@@ -126,7 +130,7 @@ button:hover {
 
 .side-bar {
     grid-column: 1;
-    grid-row: 2;
+    grid-row: 2 / 4;
     width: 15vw;
     height: 100%;
     border: 1px solid grey;
