--- a/master/client/src/main.css
+++ b/master/client/src/main.css
@@ -26,14 +26,19 @@ button:hover {
 }
 
 .grid-container {
+    background-color: #EBE9E1;
     display: grid;
     grid-template-columns: 1fr 5fr;
-    grid-template-rows: 2fr 1fr auto 1fr;
-    height: 100vh;
+    /* grid-template-rows: 2fr 1fr auto 1fr; */
+    /* height: 100vh; */
 }
 
 .grid-container .sort {
     grid-row: 2;
+}
+
+.grid-container .sort button {
+    margin: 1rem 0 0 1rem;
 }
 
 .grid-container footer {
@@ -46,7 +51,8 @@ button:hover {
 }
 
 .top-bar {
-    background-color: rgb(166, 220, 59);
+    background-color: #EFB11D;
+    color: #2E3944;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: auto auto auto;
@@ -68,8 +74,8 @@ button:hover {
     height: 50%;
 }
 
-.top-bar button {
-    background-color: rgb(26, 156, 179);
+.top-bar button, .grid-container .sort button, .book-view button, .top-bar-book button {
+    background-color: #D1E8E2;
     border-radius: 5px;
     grid-row: 2;
     width: 8rem;
@@ -130,11 +136,18 @@ button:hover {
 
 .side-bar {
     grid-column: 1;
-    grid-row: 2 / 4;
+    grid-row: 2 / 5;
     width: 15vw;
     height: 100%;
     border: 1px solid grey;
     overflow-y: auto;
+}
+
+.side-bar button {
+    background-color: #D1E8E2;
+    border-radius: 5px;
+    grid-row: 2;
+    width: 8rem;
 }
 
 .forms {
@@ -148,7 +161,7 @@ button:hover {
 .forms button {
     width: 5rem;
     padding: 0.2rem 0;
-    background-color: aqua;
+    background-color: #D1E8E2;
     border-radius: 5px;
 }
 
@@ -189,6 +202,7 @@ button:hover {
 .recipes {
     display: grid;
     margin: 1rem; 
+    min-height: 100vh;
     height: auto;
     grid-template-columns: repeat(4, 1fr);
     row-gap: 1rem;
@@ -196,11 +210,12 @@ button:hover {
 
 .popular-recipes {
     display: grid;
-    margin: 1rem; 
+    margin: 1rem;
+    min-height: 100vh; 
     height: auto;
     grid-template-columns: repeat(4, 1fr);
     row-gap: 1rem;
-    width: 100vw;
+    width: 96vw;
 }
 
 .recipe {
@@ -272,12 +287,6 @@ button:hover {
     color: gold;
 }
 
-.top {
-    display: flex;
-    background-color: rgb(166, 220, 59);
-    padding: 1rem;
-}
-
 .top button {
     margin: 1rem;
     width: 10rem;
@@ -291,7 +300,7 @@ button:hover {
     padding: 0 1rem;
     border: 2px solid black;
     align-items: center;
-    grid-template-columns: 1fr 3fr 2fr 1fr;
+    grid-template-columns: 1fr 6fr 3fr 1fr;
     row-gap: 1rem;
     column-gap: 1rem;
 }
@@ -302,7 +311,7 @@ button:hover {
 
 .recipe-details img {
     grid-column: 2;
-    width: 50%;
+    width: 100%;
     align-self: center;
     border: 2px solid black;
     border-radius: 5px;
@@ -320,10 +329,6 @@ button:hover {
     margin-right: 3rem;
 }
 
-.step {
-    width: 20rem;
-}
-
 .ingredient-list, .step-list {
     border: 2px solid black;
     border-radius: 5px;
@@ -336,6 +341,11 @@ button:hover {
 
 .step-list ol > * {
     width: auto;
+}
+
+.add-recipe {
+    background-color: #EBE9E1;
+    overflow: hidden;
 }
 
 .add-recipe label {
@@ -370,6 +380,16 @@ button:hover {
     width: 9rem;
 }
 
+.view-recipe {
+    display: grid;
+    background-color: #EBE9E1;
+}
+
+.recipe-details .info {
+    grid-column: 3;
+    grid-row: 3;
+}
+
 .box {
     border: 2px solid black;
     border-radius: 5px;
@@ -384,6 +404,8 @@ button:hover {
 .checkboxes {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
+    background-color: white;
+    width: 90vw;
 }
 
 .add {
@@ -396,12 +418,45 @@ button:hover {
 }
 
 .sign-up, .login-page, .edit-user {
+    background-color: #EBE9E1;
     border: 2px solid black;
     border-radius: 5px;
 }
 
+.name-title {
+    padding: 0.5rem;
+    cursor: pointer;
+}
+
+.user-details {
+    display: flex;
+    column-gap: 1rem;
+}
+
+.labels {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.inputs {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: 0.3rem;
+}
+
+.inputs input {
+    margin-bottom: 0.8rem;
+    height: 1rem;
+}
+
+.inputs input:last-child {
+    margin-bottom: 0;
+}
+
 .login-page {
-    height: 85vh;
+    height: 74.8vh;
 }
 
 .login-page .forms {
@@ -435,9 +490,15 @@ button:hover {
     background-color: red;
 }
 
+.personal-collection .top-bar button, .favourite-recipes .top-bar button {
+    width: 70%;
+    height: 80%;
+}
+
 .groups-page {
     display: grid;
     align-items: center;
+    background-color: #EBE9E1;
 }
 
 .groups-page .top-bar {
@@ -448,6 +509,10 @@ button:hover {
     height: 1.5rem;
 }
 
+.group-page {
+    background-color: #EBE9E1;
+}
+
 .group-page .top-bar button {
     height: 1rem;
 }
@@ -455,10 +520,9 @@ button:hover {
 .groups {
     display: flex;
     flex-direction: column;
-    align-self: center;
-    width: 100vw;
-    justify-content: center;
     align-items: center;
+    height: 100vh;
+    grid-column: 1 / 3;
 }
 
 .group {
@@ -476,7 +540,8 @@ button:hover {
 }
 
 .top-grid {
-    background-color: rgb(166, 220, 59);
+    background-color: #EFB11D;
+    color: #2E3944;
     display: grid;
     column-gap: 1rem;
     row-gap: 1rem;
@@ -486,12 +551,19 @@ button:hover {
     grid-column: 1 / 6;
 }
 
-.top-grid button {
-    background-color: rgb(26, 156, 179);
-    border-radius: 5px;
+.top-grid .description {
+    text-align: center;
+    grid-column: 1 / 6;
     grid-row: 2;
+}
+
+.top-grid button {
+    background-color: #D1E8E2;
+    border-radius: 5px;
+    grid-row: 3;
     width: 8rem;
-    margin-left: 2rem;
+    margin: 0 0 1rem 2rem;
+    padding: 0.4rem;
 }
 
 .add-members-page {
@@ -515,6 +587,9 @@ button:hover {
     margin-top: 1rem;
 }
 
+.create-group {
+    height: 100vh;
+}
 
 .edit-group {
     display: flex;
@@ -551,7 +626,7 @@ button:hover {
 }
 
 .create-book-button {
-    background-color: orange;
+    background-color: #D1E8E2;
     border-radius: 5px;
     padding: 0.2rem 5rem;
     margin-left: 1rem;
@@ -561,18 +636,19 @@ button:hover {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     margin: 1rem 0 0 1rem;
+    column-gap: 1rem;
 }
 
 .book {
-    width: 300px;
-    height: 400px;
     font-family: "Comic Sans MS", sans-serif;
     cursor: pointer;
 }
 
 .cover {
-    background: linear-gradient(90deg, #ffeb3b, #ff9800);
-    border: 4px solid black;
+    width: 300px;
+    height: 400px;
+    background: #C5CBE3;
+    border-left: 10px solid #123C69;
     border-radius: 5px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
     display: flex;
@@ -586,7 +662,8 @@ button:hover {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: 2fr 1fr 1fr;
-    background-color: orange;
+    background-color: #EFB11D;
+    color: #2E3944;
     padding-bottom: 0.2rem;
     column-gap: 1rem;
 }
@@ -622,8 +699,18 @@ button:hover {
     grid-column: 5;
 }
 
+.book-options {
+    display: flex;
+    justify-content: center;
+}
+
+.book-options button {
+    padding: 0.5rem;
+    margin: 1rem;
+}
+
 .book-recipe {
-    margin-top: 0.2rem;
+    margin: 0.2rem 0;
     display: grid;
     padding: 0 1rem;
     align-items: center;
@@ -666,6 +753,10 @@ button:hover {
     grid-column: 4;
 }
 
+.book-recipe button {
+    width: 5rem;
+}
+
 .book-recipe .previous::before,
 .book-recipe .next::before {
     content: "";
@@ -688,11 +779,14 @@ button:hover {
 .bookpage {
     display: flex;
     justify-content: center;
+    margin: 1rem 0;
 }
 
 .comments {
     border: 4px solid black;
     padding: 1rem;
+    background-color: white;
+    margin-bottom: 0.5rem;
 }
 
 .comment-options {
@@ -731,11 +825,25 @@ button:hover {
     font-size: 11px;
 }
 
+.direct-message {
+    background-color: #EBE9E1;
+    overflow: hidden;
+}
+
+.direct-message .top-bar button {
+    margin-bottom: 0.5rem;
+    padding: 0.5rem;
+}
+
 .email-to-be-sent {
     border: 4px solid black;
     border-radius: 10px;
     text-align: left;
     padding: 1rem;
+}
+
+.favourite-recipes {
+    min-height: 100vh;
 }
 
 .favourite-section {
@@ -779,10 +887,15 @@ button:hover {
     border-top-color: purple;
 }
 
+.page-button {
+    background-color: #D1E8E2;
+    border-radius: 10px;
+    padding: 0.3rem;
+}
+
 footer {
     text-align: center;
-    background-color: green;
-    color: white;
+    background-color: #EFB11D;
     max-height: 1rem;
     padding: 1.5rem 0;
     width: 100%;
