--- a/master/client/src/main.css
+++ b/master/client/src/main.css
@@ -29,8 +29,6 @@ button:hover {
     background-color: #EBE9E1;
     display: grid;
     grid-template-columns: 1fr 5fr;
-    /* grid-template-rows: 2fr 1fr auto 1fr; */
-    /* height: 100vh; */
 }
 
 .grid-container .sort {
@@ -567,12 +565,14 @@ button:hover {
 }
 
 .add-members-page {
+    background-color: #EBE9E1;
     display: flex;
     flex-direction: column;
+    height: 100vh;
 }
 
 .add-members-page .top {
-    background-color: greenyellow;
+    background-color: #EFB11D;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -592,6 +592,7 @@ button:hover {
 }
 
 .edit-group {
+    background-color: #EBE9E1;
     display: flex;
     flex-direction: column;
 }
@@ -621,15 +622,41 @@ button:hover {
     padding: 1rem;
 }
 
-.create-book button {
-    margin-top: 1rem;
+.group-options {
+    display: grid;
+    align-items: center;
+    grid-template-columns: 2fr 2fr;
+}
+
+.group-options .search-bar {
+    display: flex;
+}
+
+.group-options .search-bar input {
+    width: 20rem;
+    height: 2rem;
+    border-radius: 5px;
+    border: 2px solid black;
+    top: 0;
+}
+
+.group-options .search-bar img {
+    border: 2px solid black;
+    border-radius: 5px;
+    height: 2rem;
+    cursor: pointer;
+}
+
+.group-options .search-bar img:hover {
+    background-color: blue;
 }
 
 .create-book-button {
     background-color: #D1E8E2;
     border-radius: 5px;
-    padding: 0.2rem 5rem;
-    margin-left: 1rem;
+    margin: 1rem 6rem 0 1rem;
+    width: 8rem;
+    height: 3rem;
 }
 
 .books {
@@ -707,6 +734,12 @@ button:hover {
 .book-options button {
     padding: 0.5rem;
     margin: 1rem;
+}
+
+.create-book {
+    background-color: #EBE9E1;
+    height: 100vh;
+    overflow: hidden;
 }
 
 .book-recipe {
